  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

3.2.1 2022/01/xx
  - esproxy - handle sessions2 without prefix

3.2.0 2021/12/07
  - release - node 14.18.2
  - release - remove daily.sh, setup a cron directly now
  - all - refactor some shared code into common directory
  - capture - fix memory leak with ip4 frags and packet q overflowing
  - capture - standardize on config error process exiting
  - capture - ietf quic improvements
  - tests - add some auth tests to test suite
  - viewer - jquery upgrade
  - viewer - help fields display improvements
  - viewer - support https urls in wise plugin (issue #1777)
  - viewer - fix history links with && not working
  - viewer - userAuthCreateTmpl improvements
  - viewer - fix cron and database bounding queries
  - viewer - fix settings page not loading on pre 3.x config
  - viewer - cyberchef didn't always load the packets

3.1.1 2021/10/13
  - release - node 14.18.1
  - addUser.js - fix not exiting on complete when certs defined
  - all - deal with usersElasticsearch being an array better
  - capture - increase max of pcapWriteSize, tpacketv3NumThreads
  - capture - decrease max of maxESConns, maxESRequests
  - viewer - fix vlan display (broke in 3.0.0)
  - viewer - Issue Query on Page Load "No" option changed to issue query if there is a search expression
  - viewer - fix position of value actions dropdown in spigraph table
  - wise - fix error msg about redundant parameters
  - wise - new mergeQuery setting for splunk

3.1.0 2021/10/04
  - all - support float field type
  - all - support Q-in-Q ether type
  - all - --insecure has consistent messaging now
  - all - Finally added elasticsearchBasicAuth/usersElasticsearchBasicAuth can be